# matrix-visualizer

./: .gitignore  CMakeLists.txt  README.md
assets/models/backpack/: desktop.ini
assets/shaders/: grid.frag  grid.vert
includes/: Camera.h  PathResolver.h  Shader.h  Vertex.h
includes/primitives/: Cube.h  Plane.h  Quad.h  Skybox.h
src/: Camera.cpp  Shader.cpp  main.cpp
